--- a/index.html
+++ b/index.html
@@ -30,24 +30,24 @@
     a { color: var(--ink); text-decoration: none; }
     a:hover { color: var(--primary); }
 
-    .page { display: grid; grid-template-columns: 400px 1fr; min-height: 100vh; }
+    .page { display: grid; grid-template-columns: 320px 1fr; min-height: 100vh; }
     .sidebar {
       position: sticky; top: 0; height: 100vh;
-      padding: 56px 32px; display: flex; flex-direction: column;
+      padding: 80px 40px; display: flex; flex-direction: column; justify-content: flex-start;
       background: linear-gradient(180deg, rgba(14,21,37,.97), rgba(14,21,37,.9));
     }
-    .brand { font-size: 46px; font-weight: 800; line-height: 1.05; white-space: nowrap; }
-    .role { margin-top: 6px; font-weight: 600; color: var(--muted); }
-    .tagline { margin: 14px 0 20px; color: var(--muted); max-width: 260px; font-size:15px }
+    .brand { font-size: 44px; font-weight: 800; line-height: 1.2; margin-bottom: 8px; }
+    .role { font-weight: 600; color: var(--muted); margin-bottom: 12px; }
+    .tagline { margin: 12px 0 28px; color: var(--muted); max-width: 260px; font-size:15px }
 
-    .chips { margin: 10px 0 24px; display:flex; flex-wrap:wrap; gap:10px }
+    .chips { margin: 0 0 28px; display:flex; flex-wrap:wrap; gap:10px }
     .chip { border:1px solid var(--line); border-radius:999px; padding:6px 10px; color:var(--muted); font-size:12px; background:rgba(255,255,255,.03)}
 
     .social { display: flex; gap: 18px; margin-top:auto }
     .social a svg { width:22px; height:22px; transition: transform 0.2s ease, filter 0.2s ease; }
     .social a:hover svg { transform: scale(1.15); filter: brightness(1.3); }
 
-    .content { padding: 64px 40px; max-width: 980px; }
+    .content { padding: 80px 60px; max-width: 900px; margin: 0 auto; }
     section { margin-bottom: 60px; }
     h2 { font-size: 14px; letter-spacing: .18em; color: var(--primary); margin: 0 0 16px; text-transform: uppercase; }
     h3 { margin: 0 0 6px; transition: color 0.2s ease; }
@@ -64,18 +64,11 @@
 
     footer { border-top: 1px solid var(--line); padding-top: 18px; color: var(--muted); font-size: 14px }
 
-    @media (max-width: 1200px) {
-      .page { grid-template-columns: 360px 1fr; }
-      .content { padding: 56px 36px; }
-    }
     @media (max-width: 980px) {
       .page { grid-template-columns: 1fr; }
-      .sidebar { position: static; height: auto; border-bottom: 1px solid var(--line); padding: 28px 22px; }
+      .sidebar { position: static; height: auto; border-bottom: 1px solid var(--line); padding: 40px 24px; }
       .brand { font-size: 34px; white-space: normal; }
-      .content { padding: 28px 22px; max-width: 100%; }
-    }
-      .sidebar { position: static; height: auto; border-bottom: 1px solid var(--line); padding: 28px 22px; }
-      .content { padding: 28px 22px; }
+      .content { padding: 40px 24px; max-width: 100%; }
     }
   </style>
 </head>
