--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <body>
   <div class="page">
     <aside class="sidebar">
-      <div class="brand">Gulistan Sahin</div>
+      <div class=\"brand\">Gulistan&nbsp;Sahin</div>
       <div class="role">Business Intelligence · Machine Learning · Automation</div>
       <div class="chips">
         <span class="chip">Splunk</span><span class="chip">Tableau</span><span class="chip">SQL</span><span class="chip">Python</span>
