--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       padding: 80px 40px; display: flex; flex-direction: column; justify-content: flex-start;
       background: linear-gradient(180deg, rgba(14,21,37,.97), rgba(14,21,37,.9));
     }
-    .brand { font-size: 44px; font-weight: 800; line-height: 1.2; margin-bottom: 8px; }
+    .brand { font-size: 40px; font-weight: 800; line-height: 1.1; margin-bottom: 8px; white-space: nowrap; }
     .role { font-weight: 600; color: var(--muted); margin-bottom: 12px; }
     .tagline { margin: 12px 0 28px; color: var(--muted); max-width: 260px; font-size:15px }
 
@@ -67,7 +67,7 @@
     @media (max-width: 980px) {
       .page { grid-template-columns: 1fr; }
       .sidebar { position: static; height: auto; border-bottom: 1px solid var(--line); padding: 40px 24px; }
-      .brand { font-size: 34px; white-space: normal; }
+      .brand { font-size: 30px; white-space: normal; }
       .content { padding: 40px 24px; max-width: 100%; }
     }
   </style>
@@ -75,7 +75,7 @@
 <body>
   <div class="page">
     <aside class="sidebar">
-      <div class=\"brand\">Gulistan&nbsp;Sahin</div>
+      <div class="brand">Gulistan Sahin</div>
       <div class="role">Business Intelligence · Machine Learning · Automation</div>
       <div class="chips">
         <span class="chip">Splunk</span><span class="chip">Tableau</span><span class="chip">SQL</span><span class="chip">Python</span>
