--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     .chips { margin: 0 0 28px; display:flex; flex-wrap:wrap; gap:10px }
     .chip { border:1px solid var(--line); border-radius:999px; padding:6px 10px; color:var(--muted); font-size:12px; background:rgba(255,255,255,.03)}
 
-    .social { display: flex; gap: 18px; margin-top:auto }
+    .social { display: flex; gap: 18px; margin-top:auto; justify-content: center; }
     .social a svg { width:22px; height:22px; transition: transform 0.2s ease, filter 0.2s ease; }
     .social a:hover svg { transform: scale(1.15); filter: brightness(1.3); }
 
