--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     .chips { margin: 0 0 28px; display:flex; flex-wrap:wrap; gap:10px }
     .chip { border:1px solid var(--line); border-radius:999px; padding:6px 10px; color:var(--muted); font-size:12px; background:rgba(255,255,255,.03)}
 
-    .social { display: flex; gap: 18px; margin-top:auto; justify-content: center; }
-    .social a svg { width:22px; height:22px; transition: transform 0.2s ease, filter 0.2s ease; }
-    .social a:hover svg { transform: scale(1.15); filter: brightness(1.3); }
+    .social { display: flex; gap: 20px; margin-top:auto; justify-content: flex-start; }
+    .social a svg { width:25px; height:25px; transition: transform 0.2s ease, filter 0.2s ease; }
+    .social a:hover svg { transform: scale(1.2); filter: brightness(1.3); }
 
     .content { padding: 80px 60px; max-width: 900px; margin: 0 auto; }
     section { margin-bottom: 60px; }
@@ -69,6 +69,7 @@
       .sidebar { position: static; height: auto; border-bottom: 1px solid var(--line); padding: 40px 24px; }
       .brand { font-size: 30px; white-space: normal; }
       .content { padding: 40px 24px; max-width: 100%; }
+      .social a svg { width:24px; height:24px; }
     }
   </style>
 </head>
